moved buttons farther right to avoid overlapping

--- a/static/newDesign.css
+++ b/static/newDesign.css
@@ -204,7 +204,7 @@ main {
   right: 125px;
   width: 300px;
   padding: 10px;
-  margin: 250px;
+  margin: 30px;
   margin-top: -650px;
 }
 
